# ML-FinalProject

./: .gitignore  justfile  plots.ipynb  pre.tex  pyproject.toml
.github/workflows/: build_paper.yml
document/: justfile  paper.tex  references.bib  texlive_packages.txt
document/plots/: plot.py
document/tools/: create-image.py  create-video-only.py  create-video.py  extract-abstract.py  generate_lexers_json.py
document/tools/lexers/: Lean4Lexer.py  MLIRLexer.py
justscripts/: main.sh  shell.sh
src/: constans.py
src/road_recognition/: data.py  dataset.py  main.py  model.py  pipeline.py  prediction.py  train.py
src/road_recognition/models/: dedicated_u_net.py  metrics.py  psi_net.py  u_net.py  utils.py
