[project]
name = "road_recognition"
version = "0.1.0"
description = ""
authors = [{name="ZiveRael", email="papeernscal@gmail.com"}]
readme = "README.md"
dependencies = [
    "ipykernel==6.31.0",
    "keras>=3.13.0",
    "matplotlib==3.10.6",
    "nbformat>=5.10.4",
    "numpy==2.3.3",
    "opencv-python>=4.11.0.86",
    "optuna>=4.6.0",
    "pandas==2.3.2",
    "plotly>=6.5.0",
    "polars==1.33.1",
    "pydantic==2.11.10",
    "pygments>=2.19.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]
requires-python=">= 3.12, <3.13"

[tool.uv]
package = true


[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "ruff==0.13.3",
    "pdbpp==0.11.7",
    "pytest-cov==7.0.0",
    "pandas-stubs==2.3.2.250926",
    "black==25.9.0",
]

[project.scripts]
train = "road_recognition.train:app"
predict = "road_recognition.prediction:app"

[tool.black]
line-length = 80
skip-string-normalization = true
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]

plugins = [
    "pydantic.mypy",
]
exclude = [
    "test_gd_simple.py",
    "test_gradient_descent.py",
    "test_ridge_gd.py",
]
warn_unused_configs = true
show_error_context = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
]
ignore_missing_imports = true



[tool.ruff]
exclude = ["notebooks"]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F841"]
ignore = [ "ANN", "TD", "N803", "N805", "N806", "COM812", "ISC001", "E501", "D", "RUF002"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D"]
"src/data_utils.py" = ["ALL"]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument:
    "DTZ001",  # The use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "EM101",   # Exception must not use a string literal, assign to variable first
    "FBT001",  # Boolean-typed positional argument in function definition
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison, consider replacing x with a constant variable
    "PT004",   # Fixture `x` does not return anything, add leading underscore
    "S101",    # Use of assert
    "SLF001",  # Private member accessed
    "TRY003",  # Avoid specifying long messages outside the exception class
    "D",
    "ALL",
]

#Prerefined tests
"tests/test_gd_simple.py" = ["ALL"]
"tests/test_gradient_descent.py" = ["ALL"]
"tests/test_ridge_gd.py" = ["ALL"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party"
]
lines-after-imports = 2
known-third-party = ["yaml"]




[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-annotations]
# Configure type annotation requirements (PEP 484 compliance)
allow-star-arg-any = false
ignore-fully-untyped = false
suppress-dummy-args = true
suppress-none-returning = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = "tests"
filterwarnings = [
]
